--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,17 +4,21 @@ spring:
 
   datasource:
     url: jdbc:postgresql://localhost:5432/jobportal
-    username: root
-    password: root
+    username: titus
+    password: 123456789
     driver-class-name: org.postgresql.Driver
 
   jpa:
     hibernate:
-      ddl-auto: validate
+      ddl-auto: update
     show-sql: true
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
-
+jwt:
+  secret: vkdy+vIJzGMEvl2A//Uv2FfXZ8/Wa9SJeiHnS0DA4yg=
+  expiration: 3600000
+  tokenPrefix: Bearer
+  headerString: Authorization
 server:
   port: 60289
